Fix alignment of switch in footer section

--- a/index.css
+++ b/index.css
@@ -136,7 +136,7 @@ body {
     width: 64px;
     height: 25px;
     top: 15px;
-    left: 10px;
+    right: -50px;
 }
 
 .switch input {
@@ -871,10 +871,12 @@ footer {
     text-align: center;
     line-height: 2rem;
 }
+.footer-section-text li {
+    text-wrap: nowrap;
+}
 .footer-section-text li a {
     text-decoration: none;
     color: white;
-
 }
 .footer-contact-content-container {
     display: flex;
@@ -886,6 +888,10 @@ footer {
 .footer-contact-icon {
     font-size: 1.5rem;
     color: #dfaf61;
+}
+.footer-contact-text a {
+    text-decoration: none;
+    color: white;
 }
 .footer-map {
     width: 250px;
@@ -1099,6 +1105,10 @@ body.dark-mode .message-text{
         padding-inline: var(--inline-offset-1200px);
     }
 
+    .switch {
+        right: -20px;
+    }
+
     .intro-section {
         margin-inline: var(--inline-offset-1200px);
     }
@@ -1153,6 +1163,9 @@ body.dark-mode .message-text{
     }
     .intro-section-text {
         letter-spacing: 5px;
+    }
+    .navbar-container {
+        gap: 1rem;
     }
     @keyframes scroll {
         to {
